@startuml dao

interface RankDAO {
    + addRecord(name, score) : void
    + deleteRecord(rankNum) : void
    + getAllrecord() : List<Record>
}

class RankDAOImpl {
    - rank : List<Record>
    - filePath : String
    + RankDAOImpl(filePath)
    + addRecord(name, score) : void
    + deleteRecord(rankNum) : void
    + getAllrecord() : List<Record>
    + showRank() : void
    - updateRankNumbers() : void
    - saveToFile() : void
}

class Record {
    - name : String
    - score : int
    - time : long
    - ranknum : int
    + Record(name, score, time, ranknum)
    + getName() : String
    + getScore() : int
    + getTime() : long
    + getRankNum() : int
}

RankDAO <|.. RankDAOImpl
RankDAOImpl o--> Record : manages

note right of RankDAO
  DAO接口
  定义标准数据操作
end note

note right of RankDAOImpl
  DAO实现类
  CSV文件持久化
end note

@enduml